[gd_scene load_steps=11 format=3 uid="uid://dmv477jlprrq4"]

[ext_resource type="Script" uid="uid://50sq3h8a61ma" path="res://scripts/main_menu.gd" id="1_l6cm7"]
[ext_resource type="FontFile" uid="uid://d3q781uu28256" path="res://assets/fonts/PixelOperator8.ttf" id="2_bqqt6"]
[ext_resource type="Texture2D" uid="uid://bpaygy1vgaeec" path="res://assets/sprites/knight.png" id="3_wu84c"]
[ext_resource type="PackedScene" uid="uid://okxlrqmdvd5n" path="res://scenes/settings.tscn" id="4_wu84c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bqqt6"]
bg_color = Color(0.14902, 0.156863, 0.160784, 0.501961)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ln24"]
atlas = ExtResource("3_wu84c")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rtw2f"]
atlas = ExtResource("3_wu84c")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oa1go"]
atlas = ExtResource("3_wu84c")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbmy8"]
atlas = ExtResource("3_wu84c")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_jk1qb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ln24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rtw2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oa1go")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbmy8")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[node name="MainMenu" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 3.0
offset_right = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bqqt6")
script = ExtResource("1_l6cm7")

[node name="Knight" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -123.0
offset_top = 80.0
offset_right = 123.0
offset_bottom = 115.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_bqqt6")
theme_override_font_sizes/font_size = 32
text = "The infamous
knight"
horizontal_alignment = 1

[node name="Start game" type="Button" parent="."]
custom_minimum_size = Vector2(300, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -422.0
offset_top = -121.0
offset_right = -122.0
offset_bottom = -71.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_bqqt6")
theme_override_font_sizes/font_size = 32
text = "Start game"

[node name="Settings" type="Button" parent="."]
custom_minimum_size = Vector2(300, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -422.0
offset_top = -25.0
offset_right = -122.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_bqqt6")
theme_override_font_sizes/font_size = 32
text = "Settings"

[node name="Quit" type="Button" parent="."]
custom_minimum_size = Vector2(300, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -422.0
offset_top = 71.0
offset_right = -122.0
offset_bottom = 121.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_bqqt6")
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(790, 305)
scale = Vector2(6.0625, 6.0625)
sprite_frames = SubResource("SpriteFrames_jk1qb")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.462998

[node name="sure" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -335.0
offset_top = -190.0
offset_right = 335.0
offset_bottom = 190.0
grow_horizontal = 2
grow_vertical = 2

[node name="rusure" type="Label" parent="sure"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.5
offset_top = -92.0
offset_right = 127.5
offset_bottom = -68.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_bqqt6")
theme_override_font_sizes/font_size = 24
text = "Are you sure?"
horizontal_alignment = 1

[node name="yes" type="Button" parent="sure"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 34.0
offset_top = 63.0
offset_right = 284.0
offset_bottom = 113.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_bqqt6")
theme_override_font_sizes/font_size = 32
text = "Yes"

[node name="no" type="Button" parent="sure"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -278.0
offset_top = 63.0
offset_right = -28.0
offset_bottom = 113.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_bqqt6")
theme_override_font_sizes/font_size = 32
text = "No"

[node name="Settings2" parent="." instance=ExtResource("4_wu84c")]
top_level = true
layout_mode = 1
grow_horizontal = 1
grow_vertical = 1

[connection signal="pressed" from="Start game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="sure/yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="sure/no" to="." method="_on_no_pressed"]
